# simple-homeassistant

./: .jhclipignore  MANIFEST.in  README.md  pyproject.toml
homeassistant/: __init__.py
